--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,15 @@
 {
   "name": "api",
   "version": "1.0.0",
+  "scripts": {
+    "dev": "node src/index.js | npx pino-pretty"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pino": "^8.14.1",
+    "pino-pretty": "^10.1.0",
     "sqlite3": "^5.1.6",
     "web-push": "^3.6.3"
   }
