--- a/src/api/package.json
+++ b/src/api/package.json
@@ -9,8 +9,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pino": "^8.14.1",
-    "pino-pretty": "^10.1.0",
     "sqlite3": "^5.1.6",
     "web-push": "^3.6.3"
+  },
+  "devDependencies": {
+    "pino-pretty": "^10.1.0"
   }
 }
