feat: move cors to nginx

--- a/nginx/server.conf
+++ b/nginx/server.conf
@@ -11,7 +11,21 @@ server {
     add_header                      Strict-Transport-Security "max-age=31536000";
 
     location / {
-        proxy_pass                  http://localhost:1234;
+        # Handle preflight requests (OPTIONS)
+        if ($request_method = OPTIONS) {
+            add_header 'Access-Control-Allow-Origin' 'https://laundry.iot.jozefcipa.com';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type';
+            add_header 'Access-Control-Allow-Private-Network' 'true';
+            return 204;
+        }
+
+        add_header 'Access-Control-Allow-Origin' 'https://laundry.iot.jozefcipa.com' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+        add_header 'Access-Control-Allow-Private-Network' 'true' always;
+
+        proxy_pass http://localhost:1234;
     }
 }
 
